# boxmgr

./: .gitignore  Cargo.toml  README.md  README.zhCN.md  config.json  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
src/: bin.rs  lib.rs  windows.rs
src/api/: config.rs  generic.rs  kv.rs  manager.rs  mod.rs  script.rs  service.rs
src/common/: random.rs
src/database/: common.rs  config.rs  database.rs  error.rs  kv.rs  mod.rs  script.rs
src/log/: logger.rs  mod.rs  output.rs
src/manager/: http.rs  manager.rs  mod.rs
src/service/: clash_api.rs  error.rs  log_queue.rs  mod.rs  script.rs  service.rs  state.rs
ui/: components.d.ts  eslintrc.js  index.html  package.json  pnpm-lock.yaml  prettierrc.js  vite.config.js
ui/src/: main.js
ui/src/api/: axios.js  config.js  kv.js  manager.js  script.js  secret.js  service.js
ui/src/components/: Config.vue  ConfigConvert.vue  Home.vue  Log.vue  Script.vue  Setting.vue
ui/src/i18n/: en-US.json  index.js  zh-CN.json
ui/src/layout/: Global.vue  Login.vue
ui/src/router/: index.js
