[package]
name = "boxmgr"
version = "0.1.0"
edition = "2021"
authors = ["yaott"]
description = "A sing-box manager"

[lib]
name = "boxmgr"
path = "src/lib.rs"

[[bin]]
name = "boxmgr"
path = "src/bin.rs"

[dependencies]
log = { version = "0.4.20", features = ["std", "serde"] }
once_cell = "1.19.0"
sea-orm = { version = "0.12.14", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
chrono = "0.4.34"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.10"
async-trait = "0.1.77"
bytes = "1.5.0"
uuid = { version = "1.7.0", features = ["v4"] }
axum = { version = "0.7.4", features = ["tokio", "http1", "http2", "ws", "multipart"] }
tower-http = { version = "0.5.1", features = ["auth", "cors", "limit"] }
rust-embed = "8.2.0"
mime_guess = "2.0.4"
http = "1.0.0"
tokio-tungstenite = "0.21.0"
futures-util = "0.3.30"
cfg-if = "1.0.0"
clap = { version = "4.5.1", features = ["derive"] }
ctrlc = "3.4.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28.0", features = ["signal"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.53.0", features = ["Win32_System_Console", "Win32_Foundation"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
